--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "react-native-myreactnativelibrary",
   "version": "0.1.0",
   "description": "s",
-  "source": "./src/index.tsx",
+  "source": "./src/index.jsx",
   "main": "./lib/commonjs/index.js",
   "module": "./lib/module/index.js",
   "exports": {
     ".": {
       "import": {
-        "types": "./lib/typescript/module/src/index.d.ts",
+        "types": "./lib/typescript/index.d.ts",
         "default": "./lib/module/index.js"
       },
       "require": {
-        "types": "./lib/typescript/commonjs/src/index.d.ts",
+        "types": "./lib/typescript/index.d.ts",
         "default": "./lib/commonjs/index.js"
       }
     }
@@ -61,7 +61,8 @@
   },
   "homepage": "https://github.com/saikrishna6415/react-native-myreactnativelibrary#readme",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
@@ -169,13 +170,6 @@
       [
         "module",
         {
-          "esm": true
-        }
-      ],
-      [
-        "typescript",
-        {
-          "project": "tsconfig.build.json",
           "esm": true
         }
       ]
